--- a/index.html
+++ b/index.html
@@ -5,23 +5,17 @@ Nombre: Mariela Vargas<br>
 Url: <a href="https://actividadesag2.stackblitz.io">
 https://actividadesag2.stackblitz.io</a><br>
 
-GitHub: <a href="https://github.com/marielabvargas/Visualizacion-Actividades-Guiadas-AGs"
->https://github.com/marielabvargas/Visualizacion-Actividades-Guiadas-AGs</a>
+GitHub: <a href="https://github.com/marielabvargas/actividadesag2"
+>https://github.com/marielabvargas/actividadesag2</a>
 
-<h3>Parte 1 de la actividad : Google Sheet</h3>
-<h3>Emision de CO2 por pais</h3>
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTnguUFWvIZnm3OK57oOJ8cTuSsQyZXmkD8-1AnYoUiAp_UtnB7l7rRo9xxmPOJA_lFo_HAwC2BNi-c/pubchart?oid=1735943692&amp;format=interactive"></iframe>
-<br></br>
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTnguUFWvIZnm3OK57oOJ8cTuSsQyZXmkD8-1AnYoUiAp_UtnB7l7rRo9xxmPOJA_lFo_HAwC2BNi-c/pubchart?oid=831734406&format=interactive"></iframe>
-
-<h3>Ampliación de la Práctica</h3>
-<h3>Gráficos Combinados. Múltiples Variables.</h3>
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTnguUFWvIZnm3OK57oOJ8cTuSsQyZXmkD8-1AnYoUiAp_UtnB7l7rRo9xxmPOJA_lFo_HAwC2BNi-c/pubchart?oid=408884101&format=interactive"></iframe>
-<br></br>
-<br></br>
-<br></br>
-<br></br>
-<br></br>
-<h3>Parte 2 de la actividad : Datawrapper</h3>
-<h3>Emisión total de CO2 vs Emisión per capita</h3>
-<iframe title="Emisión CO2 Total vs Emisión per capita" aria-label="chart" id="datawrapper-chart-3ffCD" src="https://datawrapper.dwcdn.net/3ffCD/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="525"></iframe>
+<h2>Dashboard 1</h2>
+<a>Presupuesto por distribuidor/género</br>
+<a>Múmero de films por distribuidor/género</br>
+<a>Evolución en el tiempo</br>
+<a>Contribución del género a los beneficios de cada distribuidor</br>
+<img src="https://i.ibb.co/N6842vh/Dashboard-AG2-1.png" alt="Dashboard-AG2-1" border="0" />
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<h2>Dashboard 2</h2>
+<a>Dispersión con burbujas</br>
+<a>Films por IMDB Rating + IMDB Votes + Presupuesto</br>
+<img src="https://i.ibb.co/RGKtVrr/Dashboard-AG2-Dispersion-con-burbujas.png" alt="Dashboard-AG2-Dispersion-con-burbujas" border="0" />
